Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
 <li>Updates and maintains file and folder permissions and ownership.</li>
 <li>Fully configurable.</li>
 <li>Effectively acts as a deployment system. Every time you run the script, your version controlled code is deployed.</li>
-</ul><h2>Usage</h2>
+</ul><p>Version 2012.10.14</p>
+
+<h2>Usage</h2>
 
 <p><code>bash mydomain.security-scan.sh</code></p>
 
