Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 <li>Updates and maintains file and folder permissions and ownership.</li>
 <li>Fully configurable.</li>
 <li>Effectively acts as a deployment system. Every time you run the script, your version controlled code is deployed.</li>
-</ul><p>Version 2012.10.15</p>
+</ul><p>Version 2013.01.11</p>
 
 <h2>Important Warning!!!</h2>
 
-<p>This script will delete files and folders. If you do not configure your repository and this script correctly you can irreparably damage your website. We are not responsible for catastrophes caused by the mis-use (or use) of this script.</p>
+<p>This script will likely delete files and folders. If you do not configure your repository and this script correctly you can irreparably damage your website. We are not responsible for catastrophes caused by the mis-use (or use) of this script.</p>
 
 <p>To best ensure that your system does not suffer from damage due to file deletions, make sure that you BACK UP YOUR ENTIRE WEBROOT before running this script.</p>
 
@@ -155,7 +155,7 @@
 
 <h2>Authors and Contributors</h2>
 
-<p>Authored by Chaim Peter Chester (<a href="https://github.com/peterchester" class="user-mention">@peterchester</a>) with contributions from Daniel Dvorkin (<a href="https://github.com/MZAWeb" class="user-mention">@MZAWeb</a>) and Jonathan Brinley (<a href="https://github.com/jbrinley" class="user-mention">@jbrinley</a>).</p>
+<p>Authored by Chaim Peter Chester (<a href="https://github.com/peterchester" class="user-mention">@peterchester</a>) with contributions from Daniel Dvorkin (<a href="https://github.com/mzaweb" class="user-mention">@mzaweb</a>) and Jonathan Brinley (<a href="https://github.com/jbrinley" class="user-mention">@jbrinley</a>).</p>
 
 <h2>Support or Contact</h2>
 
